syntax = "proto3";
package clinicalkpi;

option go_package = "github.com/*company-data-covered*/services/go/pkg/generated/proto/clinicalkpi";
option ruby_package = "ClinicalKPIGRPC";

import "google/api/annotations.proto";
import "common/auth/auth.proto";

enum ServingStatus {
  SERVING_STATUS_UNSPECIFIED = 0;
  SERVING_STATUS_SERVING = 1;
  SERVING_STATUS_NOT_SERVING = 2;
}

service ClinicalKpiHealthService {
  rpc Check(CheckRequest) returns (CheckResponse) {
    option (common.auth.public) = true;
    option (google.api.http) = {
      get: "/healthcheck",
    };
  };
}

message CheckRequest {
  string service = 1;
}

message CheckResponse {
  ServingStatus status = 1;
}
